Bug 932755 - Add support for input/textarea minLength and tooShort. r=mrbkap