dom/webidl/HTMLInputElement.webidl
@@ -65,6 +65,8 @@ interface HTMLInputElement : HTMLElement {
   [Pure, SetterThrows]
            attribute DOMString min;
   [Pure, SetterThrows]
+           attribute long minLength;
+  [Pure, SetterThrows]
            attribute boolean multiple;
   [Pure, SetterThrows]
            attribute DOMString name;
